# unity-docs-mcp

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  DEPLOYMENT.md  LICENSE  README.md  README_ja.md  TESTING.md  config.json  demo_test.py  local_test.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_tests.py  run_tests.sh  start_inspector.sh  test_mcp_tools.py  test_minimal_server.py  test_server.py  validate_structure.py
.github/workflows/: test.yml
docs/: ARCHITECTURE.md  ARCHITECTURE_ja.md  CHANGELOG.md  CONTRIBUTING.md  DETAILED_GUIDE.md  README.md
src/unity_docs_mcp/: __init__.py  parser.py  scraper.py  search_index.py  server.py
tests/: __init__.py  test_basic_functionality.py  test_cache.py  test_integration.py  test_namespace_handling.py  test_parser.py  test_performance.py  test_scraper.py  test_scraper_search.py  test_search_index.py  test_server.py  test_version_features.py
