[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unity-docs-mcp"
version = "0.2.2"
description = "MCP server for Unity documentation retrieval"
authors = [{name = "Saqoosha", email = "saqoosha@example.com"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "markdownify>=0.11.6",
    "lxml>=4.9.0",
    "trafilatura>=1.8.0",
]

[project.scripts]
unity-docs-mcp = "unity_docs_mcp.server:cli_main"

[tool.setuptools.packages.find]
where = ["src"]